do not show if no data

--- a/health/templates/health/base.html
+++ b/health/templates/health/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizontal Cards</title>
+    <title>Patient Health Monitoring</title>
     <style>
         /* Flex container styling */
         .card-container {
@@ -38,7 +38,7 @@
 
 
     <script>
-        setTimeout('location.reload()', 500)
+        setTimeout('location.reload()', 1000)
       </script>
     
 </body>
