--- a/health/templates/health/chart.html
+++ b/health/templates/health/chart.html
@@ -13,6 +13,7 @@
 <div class="card-container">
     
     <!-- SPO2 Card -->
+    {% if spo2 %}
     <div class="card">
         <h5 class="card-title">SPO2</h5>
         <ul class="list-unstyled">
@@ -20,8 +21,10 @@
             <li>Latest Time: {{spo2.time}}</li>
         </ul>
     </div>
+    {% endif %}
 
     <!-- Pulse Card -->
+    {% if pulse %}
     <div class="card">
         <h5 class="card-title">Pulse</h5>
         <ul class="list-unstyled">
@@ -29,8 +32,10 @@
             <li>Latest Time: {{pulse.time}}</li>
         </ul>
     </div>
+    {% endif %}
 
      <!-- Object Temperature Card -->
+     {% if ambientTemperature %}
      <div class="card">
         <h5 class="card-title">Temperature</h5>
         <ul class="list-unstyled">
@@ -39,6 +44,7 @@
             <li>Latest Time: {{objTemperature.time}}</li>
         </ul>
     </div>
+    {% endif %}
 
 </div>
 
